--- a/reports/report.tex
+++ b/reports/report.tex
@@ -245,7 +245,7 @@ Hiện tại, chúng tôi đang tiếp tục cải tiến mô hình để nâng 
 \subsection{Phân tích kết quả}
 Từ các kết quả thử nghiệm trên, chúng ta có thể thấy mô hình đã học được cách tạo ra chú thích phù hợp cho các ảnh đầu vào. Mô hình có khả năng nhận diện các đối tượng chính trong ảnh và mô tả hành động của chúng một cách chính xác. Tuy nhiên, vẫn có một số trường hợp mô hình chưa mô tả đầy đủ hoặc chính xác hoàn toàn chi tiết trong ảnh, cho thấy còn dư địa để cải thiện trong tương lai.
 \section{Kết luận}
-
+Mặc dù mô hình này đã ra đời từ lâu, nhưng nó vẫn là một trong những mô hình chú thích ảnh tốt nhất hiện nay. Chúng tôi đã triển khai và tinh chỉnh mô hình này trên tập dữ liệu Flickr8k, đạt được kết quả tốt với các chỉ số BLEU và METEOR. Tuy nhiên, vẫn còn nhiều cải tiến có thể thực hiện để nâng cao chất lượng chú thích, chẳng hạn như thử nghiệm với các kiến trúc CNN khác nhau hoặc áp dụng các kỹ thuật học sâu mới hơn.
 \begin{thebibliography}{00}
 \bibitem{show_attend_tell} K. Xu et al., "Show, Attend and Tell: Neural Image Caption Generation with Visual Attention," arXiv:1502.03044, 2015.
 \bibitem{pytorch_tutorial} S. G. Vinod, "A PyTorch Tutorial to Image Captioning," GitHub repository, 2018.
